--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "name": "metadone/dbf2csv",
     "description": "Convert DBF to CSV.",
+    "keywords": ["dbf2csv","dbf","convert"],
     "authors": [
         {
-            "name": "loki",
-            "email": "loki.90@yandex.ru"
+            "name": "admin",
+            "email": "admin@metadone.ru"
         }
     ],
     "autoload": {
@@ -13,6 +14,7 @@
         }
     },
     "require": {
+        "php": ">=5.5.0",
         "symfony/console": "v3.0.4"
     }
 }
