--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Convert DBF to CSV.",
     "keywords": ["dbf2csv","dbf","convert"],
     "homepage": "http://metadone.ru",
-    "license": "MIT",
+    "license": "Apache",
     "authors": [
         {
             "name": "admin",
